fix(java-25): make plugin compatible with Java 25
String templates were removed in Java 23 even as a preview feature. A
good temporary fix for now is to use String.format(String, Object...)
and String#formatted(Object...).